logs/pytoolbox.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyaml'...
Listing './lib/python3.5/site-packages/pyaml/tests'...
Listing './lib/python3.5/site-packages/pyaml-17.12.1.dist-info'...
Listing './lib/python3.5/site-packages/python_magic-0.4.15.dist-info'...
Listing './lib/python3.5/site-packages/pytoolbox'...
Listing './lib/python3.5/site-packages/pytoolbox/django'...
Listing './lib/python3.5/site-packages/pytoolbox/django/core'...
Listing './lib/python3.5/site-packages/pytoolbox/django/forms'...
Listing './lib/python3.5/site-packages/pytoolbox/django/models'...
Listing './lib/python3.5/site-packages/pytoolbox/django/models/fields'...
Listing './lib/python3.5/site-packages/pytoolbox/django/models/managers'...
Listing './lib/python3.5/site-packages/pytoolbox/django/models/query'...
Listing './lib/python3.5/site-packages/pytoolbox/django/signals'...
Listing './lib/python3.5/site-packages/pytoolbox/django/test'...
Listing './lib/python3.5/site-packages/pytoolbox/django/test/runner'...
Listing './lib/python3.5/site-packages/pytoolbox/django/utils'...
Listing './lib/python3.5/site-packages/pytoolbox/django/views'...
Listing './lib/python3.5/site-packages/pytoolbox/django_datatable_view'...
Listing './lib/python3.5/site-packages/pytoolbox/django_datatable_view/views'...
Listing './lib/python3.5/site-packages/pytoolbox/django_filter'...
Listing './lib/python3.5/site-packages/pytoolbox/django_filter/filterset'...
Listing './lib/python3.5/site-packages/pytoolbox/django_formtools'...
Listing './lib/python3.5/site-packages/pytoolbox/django_formtools/views'...
Listing './lib/python3.5/site-packages/pytoolbox/multimedia'...
Listing './lib/python3.5/site-packages/pytoolbox/multimedia/exif'...
Listing './lib/python3.5/site-packages/pytoolbox/multimedia/ffmpeg'...
Listing './lib/python3.5/site-packages/pytoolbox/network'...
Listing './lib/python3.5/site-packages/pytoolbox/network/smpte2022'...
Listing './lib/python3.5/site-packages/pytoolbox/rest_framework'...
Listing './lib/python3.5/site-packages/pytoolbox/rest_framework/metadata'...
Listing './lib/python3.5/site-packages/pytoolbox/rest_framework/serializers'...
Listing './lib/python3.5/site-packages/pytoolbox/rest_framework/views'...
Listing './lib/python3.5/site-packages/pytoolbox/selenium'...
Listing './lib/python3.5/site-packages/pytoolbox/selenium/webelements'...
Listing './lib/python3.5/site-packages/pytoolbox-11.7.1.egg-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
